--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -77,7 +77,7 @@
 	height: 100%;
 	width: 100%;
 	margin-top: calc(20rem - 20vw);
-	margin-bottom: -25%;
+	margin-bottom: -35%;
 }
 
 .CountdownDialog {
