--- a/src/components/SponsorShowcase/SponsorShowcase.css
+++ b/src/components/SponsorShowcase/SponsorShowcase.css
@@ -43,9 +43,9 @@
 	transition: 0.5s;
 }
 
-.text {
+.SponsorsText {
 	border-left: 5px solid black;
-	padding-left: 2.25%;
+	padding-left: 2rem;
 	width: 80%;
 	font-family: Rubik;
 	font-size: max(1rem, 1.15vmin);
